tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/issue-6804-nan-match.stderr
error: cannot use NaN in patterns
  --> $DIR/issue-6804-nan-match.rs:14:9
   |
LL | const NAN: f64 = f64::NAN;
   | -------------- constant defined here
...
LL |         NAN => {},
   |         ^^^ evaluates to `NaN`, which is not allowed in patterns
   |
   = note: NaNs compare inequal to everything, even themselves, so this pattern would never match
   = help: try using the `is_nan` method instead

error: aborting due to 1 previous error

